networkpolicy/networkpolicy__basic_kafka_setup__jupyterhub__exception__system__egress__ports__443__nr2__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyterhub--exception--system--egress--ports--443--nr2
  namespace: jupyterhub
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - protocol: TCP
      port: 443
